# spamfile

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-build.yml  cmake-multi-platform.yml
src/: main.cpp
